<resources>
    <string name="app_name">GAD-PROJECT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="project_submission">Project Submission</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="first_name">First name</string>
    <string name="submit">Submit</string>
</resources>