<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity"
    android:background="@color/colorPrimary">


    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_submit_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/project_submission"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/goldYellow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:background="@drawable/input_shape"
        android:inputType="textPersonName"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:background="@drawable/input_shape"
        android:padding="15dp"
        android:textColorHint="@color/hintColor"
        android:id="@+id/editText_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/editText_firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        android:hint="@string/last_name"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editText_lastName"
        app:layout_constraintStart_toStartOf="@+id/editText_firstname"
        app:layout_constraintTop_toBottomOf="@+id/editText_lastName"
        android:background="@drawable/input_shape"
        android:padding="15dp"
        android:textColorHint="@color/hintColor"/>

    <EditText
        android:id="@+id/editText_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:hint="@string/project_on_github_link"
        android:background="@drawable/input_shape"
        android:padding="15dp"
        android:textColorHint="@color/hintColor"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/submit_button_shape"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_link"
        app:layout_constraintStart_toStartOf="@+id/editText_link"
        app:layout_constraintTop_toBottomOf="@+id/editText_link" />


</androidx.constraintlayout.widget.ConstraintLayout>